force-app/main/default/objects/Warehouse__c/fields/Cells_Max_Amount__c.field-meta.xml
<CustomField>
    <fullName>Cells_Max_Amount__c</fullName>
    <formula>Height_Containers__c  *  Length_Containers__c  *  Width_Containers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cells Max Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>