force-app/main/default/objects/Warehouse__c/fields/ContainersInUse__c.field-meta.xml
<CustomField>
    <fullName>ContainersInUse__c</fullName>
    <label>ContainersInUse</label>
    <summaryFilterItems>
        <field>Container__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Выдан</value>
    </summaryFilterItems>
    <summaryForeignKey>Container__c.Warehouse__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>