force-app/main/default/objects/Warehouse__c/fields/CurrentCapacity__c.field-meta.xml
<CustomField>
    <fullName>CurrentCapacity__c</fullName>
    <formula>Capacity__c - ContainersInUse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CurrentCapacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>