force-app/main/default/objects/Warehouse__c/fields/Height_Containers__c.field-meta.xml
<CustomField>
    <fullName>Height_Containers__c</fullName>
    <label>Height Containers</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>