force-app/main/default/objects/Warehouse__c/fields/Heigth__c.field-meta.xml
<CustomField>
    <fullName>Heigth__c</fullName>
    <label>Heigth</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>