force-app/main/default/objects/Warehouse__c/fields/Width_Containers__c.field-meta.xml
<CustomField>
    <fullName>Width_Containers__c</fullName>
    <label>Width Containers</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>