force-app/main/default/objects/Warehouse__c/recordTypes/Buffer_Zone.recordType-meta.xml
<RecordType>
    <fullName>Buffer_Zone</fullName>
    <active>true</active>
    <label>Buffer Zone</label>
</RecordType>