force-app/main/default/objects/Warehouse__c/recordTypes/Warehouse.recordType-meta.xml
<RecordType>
    <fullName>Warehouse</fullName>
    <active>true</active>
    <description>Regular warehouse</description>
    <label>Warehouse</label>
</RecordType>