force-app/main/default/objects/Warehouse__c/validationRules/Length_Decrease_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Length_Decrease_Check</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(TEXT(PRIORVALUE(Length__c))) &gt; VALUE(TEXT(Length__c))</errorConditionFormula>
    <errorDisplayField>Length__c</errorDisplayField>
    <errorMessage>You can&apos;t decrease value of the Length</errorMessage>
</ValidationRule>