force-app/main/default/objects/Warehouse__c/validationRules/Level_Decrease_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Level_Decrease_Check</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(TEXT(PRIORVALUE(Level__c))) &gt; VALUE(TEXT(Level__c))</errorConditionFormula>
    <errorDisplayField>Level__c</errorDisplayField>
    <errorMessage>You can&apos;t decrease value of the Level</errorMessage>
</ValidationRule>