force-app/main/default/objects/Warehouse__c/validationRules/Width_Decrease_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Width_Decrease_Check</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(TEXT(PRIORVALUE(Width__c))) &gt; VALUE(TEXT(Width__c))</errorConditionFormula>
    <errorDisplayField>Width__c</errorDisplayField>
    <errorMessage>You can&apos;t decrease value of the Width</errorMessage>
</ValidationRule>